syntax = "proto3";

option go_package = "users.com";

service Users {
    rpc AuthenticateUser(AuthenticateUserRequest) returns (User);
}

message ProblemDetail {
    string Problem = 1;
    string Detail = 2;
}

message User {
    string ID = 1;
    string Username = 2;
    string Email = 3;
}

message AuthenticateUserRequest {
    string SessionID = 1;
    repeated string fields = 2;
}
